kubernetes/apps/network/envoy-gateway/error-pages/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: error-pages
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - "error-pages.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: error-pages
          port: 8080
